fixed recent changes in forum edit template to be usable on small displays

--- a/inyoka/static/style/forum-sprite.css
+++ b/inyoka/static/style/forum-sprite.css
@@ -589,27 +589,32 @@ tr.unstable .topic_title {
     background: url(../img/forum/unstable.png) no-repeat right top;
 }
 
-p#version_info.unstable,
-p#version_info.lts,
-p#version_info.current {
+p.version_chooser {
+  padding-left: 24px;
+  margin-left: 24px;
+}
+
+span#version_info.unstable,
+span#version_info.lts,
+span#version_info.current {
   padding-left: 5px;
   padding-right: 5px;
 }
 
-p#version_info.unstable {
+span#version_info.unstable {
   color: white;
   padding-left: 20px;
   background: #cc0033 url(../img/forum/unstable.png) no-repeat left center;
   border: 1px solid #a8a887;
 }
 
-p#version_info.lts,
-p#version_info.current {
+span#version_info.lts,
+span#version_info.current {
   background-color: #ffffcc;
   border: 1px solid #a8a887;
 }
 
-p#version_info a {
+span#version_info a {
   color: #000;
 }
 
